--- a/public/register.html
+++ b/public/register.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
   
   <style>
-    /* Estilos compartidos copiados y adaptados para consistencia */
+    /* Estilos originales mantenidos intactos */
     :root {
       --blood: #d90429;
       --gold: #ffb703;
@@ -59,7 +59,6 @@
       border-left: 3px solid var(--gold);
       padding: 40px;
       box-shadow: 0 20px 50px rgba(0,0,0,0.9);
-      /* Forma angular tecnológica */
       clip-path: polygon(
         20px 0, 100% 0, 
         100% calc(100% - 20px), 
@@ -126,7 +125,6 @@
       letter-spacing: 1px;
     }
 
-    /* Checkbox personalizado */
     .terms-container {
       display: flex;
       align-items: flex-start;
@@ -181,7 +179,6 @@
     }
     .back-link:hover { color: var(--gold); }
 
-    /* Barra de progreso visual arriba */
     .scan-line {
       position: absolute;
       top: 0; left: 0;
@@ -214,7 +211,7 @@
         <div class="form-group">
           <label class="field-label">NOMBRE DE GUERRERO</label>
           <div class="input-wrapper">
-            <input type="text" id="ninjaName" placeholder="Ej: Hanzo" required>
+            <input type="text" id="ninjaName" autocomplete="username" placeholder="Ej: Hanzo" required>
             <i class="fas fa-user-ninja input-icon"></i>
           </div>
         </div>
@@ -222,7 +219,7 @@
         <div class="form-group">
           <label class="field-label">CORREO ELECTRÓNICO</label>
           <div class="input-wrapper">
-            <input type="email" id="email" placeholder="ninja@clan.com" required>
+            <input type="email" id="email" autocomplete="email" placeholder="ninja@clan.com" required>
             <i class="fas fa-envelope input-icon"></i>
           </div>
         </div>
@@ -230,7 +227,7 @@
         <div class="form-group">
           <label class="field-label">CONTRASEÑA</label>
           <div class="input-wrapper">
-            <input type="password" id="password" placeholder="••••••••" required>
+            <input type="password" id="password" autocomplete="new-password" placeholder="••••••••" required>
             <i class="fas fa-key input-icon"></i>
           </div>
         </div>
@@ -250,7 +247,6 @@
     </div>
   </div>
   
-
   <script>
     function mostrarTerminos() {
         window.open('terminos.html', 'CodigoHonor', 'width=600,height=800');
