--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -158,7 +158,11 @@
         </div>
     </div>
 
-    <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
-    <script type="module" src="js/dashboard.js"></script>
+
+    
+  // <script src="https://cdn.socket.io/4.6.1/socket.io.min.js"></script>
+   // <script type="module" src="js/dashboard.js"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    <script src="js/app.js"></script> <script type="module" src="js/dashboard.js"></script> ```
 </body>
 </html>
