--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -116,20 +116,13 @@
         </div>
     </div>
 
-    <div id="game-modal">
-        <button onclick="window.closeGame()" style="align-self: flex-end; margin: 0 2% 10px 0; background: #d90429; color: white; border: none; padding: 10px 20px; cursor: pointer; font-family: 'Orbitron'; font-weight: bold;">CERRAR X</button>
-        <iframe id="game-frame" src=""></iframe>
-    </div>
-
-    <div id="levelModal" class="modal" style="display:none;">
-        <div class="modal-content">
-            <span onclick="closeLevelModal()" class="close">&times;</span>
-            <div id="levelButtonsContainer"></div>
-        </div>
+ <div id="game-modal" style="position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: rgba(0,0,0,0.95); z-index: 9999; display: none; align-items: center; justify-content: center; flex-direction: column;">
+        <button onclick="window.closeGame()" style="align-self: flex-end; margin: 0 5% 10px 0; background: #d90429; color: white; border: none; padding: 10px 20px; cursor: pointer; font-family: 'Orbitron'; font-weight: bold;">CERRAR X</button>
+        <iframe id="game-frame" src="" style="width: 90%; height: 85%; border: 2px solid #ffb703; background: #000;"></iframe>
     </div>
 
     <script src="/socket.io/socket.io.js"></script>
-    <script src="js/app.js"></script>
+    <script src="js/app.js"></script> 
     <script type="module" src="js/dashboard.js"></script>
 </body>
 </html>
