--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -81,6 +81,17 @@
                     <i class="fas fa-user-ninja" style="font-size:3rem; color:var(--blood);"></i>
                     <h2 id="userName" style="margin:10px 0; font-family:'Orbitron'">Guerrero</h2>
                     <span id="userRank" style="color:var(--gold); letter-spacing:2px;">RONIN</span>
+
+                    <div class="card-dark" style="margin-top: 20px;">
+    <div style="display: flex; justify-content: space-between; margin-bottom: 5px;">
+        <span class="gold-text">PROGRESO DEL CICLO</span>
+        <span id="cycle-numbers" style="color: white;">$0.00 / $30.00</span>
+    </div>
+    <div style="background: #222; height: 10px; border-radius: 5px; overflow: hidden; border: 1px solid #444;">
+        <div id="cycle-bar" style="background: var(--ninja-red); height: 100%; width: 0%; transition: width 0.5s;"></div>
+    </div>
+    <p id="cycle-status" style="font-size: 0.8rem; color: #888; margin-top: 5px;">Estado: Inactivo</p>
+</div>
                 </div>
                 <div style="border-top:1px solid #222; padding-top:15px; margin-bottom:20px;">
                     <div style="display:flex; justify-content:space-between; margin-bottom:5px;">
