--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -135,6 +135,21 @@
                 </div>
             </div>
 
+            <section style="margin-top: 40px; margin-bottom: 40px;">
+    <h3 class="shogun-title-mini" style="margin-bottom: 15px; color:#ccc;">📜 CENSO DE GUERREROS (TOP 50)</h3>
+    
+    <div class="card-dark full-width" style="padding: 0; overflow: hidden; border: 1px solid #333;">
+        <div style="background: #220000; padding: 12px; display: flex; justify-content: space-between; border-bottom: 2px solid var(--blood);">
+            <span class="gold-text" style="font-weight:bold;">NINJA</span>
+            <span class="gold-text" style="font-weight:bold;">RANGO / FICHAS</span>
+        </div>
+        
+        <div id="warriorsGrid" style="max-height: 400px; overflow-y: auto;">
+            <p style="padding: 20px; text-align: center; color: #666;">Cargando pergaminos...</p>
+        </div>
+    </div>
+</section>
+
         </section>
 
         <section class="grid-3" style="margin-top: 30px;">
