--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -134,7 +134,7 @@
                     <span><strong>ATENCIÓN:</strong> Las ganancias por referidos están <u>BLOQUEADAS</u> hasta que actives tu Nivel 1. Comparte, pero activa rápido para no perder oro.</span>
                 </div>
             </div>
-
+</section>
             <section style="margin-top: 40px; margin-bottom: 40px;">
     <h3 class="shogun-title-mini" style="margin-bottom: 15px; color:#ccc;">📜 CENSO DE GUERREROS (TOP 50)</h3>
     
